--- a/package.json
+++ b/package.json
@@ -21,15 +21,22 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@capacitor/android": "^6.1.0",
     "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.1.0",
+    "@capacitor/core": "^6.1.0",
     "@capacitor/haptics": "6.0.0",
+    "@capacitor/ios": "^6.1.0",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
+    "express": "^4.19.2",
     "ionicons": "^7.0.0",
+    "mysql2": "^3.10.1",
+    "openai": "^4.52.0",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.20",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
@@ -42,9 +49,11 @@
     "@angular/cli": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
     "@angular/language-service": "^18.0.0",
-    "@capacitor/cli": "6.1.0",
+    "@capacitor/cli": "^6.1.0",
     "@ionic/angular-toolkit": "^11.0.1",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.14.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.57.0",
@@ -58,6 +67,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.4.0"
   },
   "description": "An Ionic project"
