--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "myApp",
+  "name": "context",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "context",
   "scripts": {
     "ng": "ng",
+    "node": "ts-node server/server.ts",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -29,6 +29,8 @@
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "ionicons": "^7.0.0",
     "mysql2": "^3.10.1",
@@ -53,7 +55,7 @@
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^20.14.7",
+    "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.57.0",
