--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
     "@types/cors": "^2.8.17",
+    "apexcharts": "^3.49.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "ionicons": "^7.0.0",
     "mysql2": "^3.10.1",
+    "ng-apexcharts": "^1.11.0",
     "openai": "^4.52.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "~7.8.0",
